--- a/views/admin/candidates.ejs
+++ b/views/admin/candidates.ejs
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="admin/css/vote-tally-lsc.css" />
     <link rel="stylesheet" type="text/css" href="admin/css/vote-tally-scc.css" />
     <link rel="stylesheet" type="text/css" href="admin/css/candidates.css" />
+    <link rel="stylesheet" type="text/css" href="admin/css/index-election.css" />
 
     <!-- Boxicons CDN Link -->
 
