--- a/views/homepages/rvs-about.ejs
+++ b/views/homepages/rvs-about.ejs
@@ -51,16 +51,25 @@
         </div>
 
         <div class="main-container">
-          This platform allows you to view and verify the results of the Bulacan State University Student Government Elections. Powered by blockchain technology, we ensure a secure, reliable, and transparent election process. Every vote is securely recorded and cannot be altered, while your identity remains private. <br />
-          <br />
-          Why You Can Trust the TANIKALA Voting System <br />
+          <p>
+            This platform allows you to view and verify the results of the Bulacan State University Student Government Elections. Powered by blockchain technology, we ensure a secure, reliable, and transparent election process. Every vote is securely recorded and cannot be altered, while your
+            identity remains private.
+
+            <br />
+            <br />
+            <h3><span class="dark-yellow">Why You Can Trust the TANIKALA Voting System</span></h3>
+          </p>
+          
           <br />
           <ul>
-            <li>Secure and Tamper-Proof Votes: Every vote is stored on a blockchain, a secure digital ledger where data cannot be changed or deleted. This ensures the election results are accurate and reliable.</li>
+            <li><span class="light-yellow">Secure and Tamper-Proof Votes:</span> Every vote is stored on a blockchain, a secure digital ledger where data cannot be changed or deleted. This ensures the election results are accurate and reliable.</li>
             <br />
-            <li>Your Privacy is Protected: Your identity stays private. No one, not even system administrators, can see who you voted for. Each vote is hashed—a process that secures your vote without revealing your identity—and cannot be traced back to you.</li>
+            <li><span class="light-yellow">Your Privacy is Protected:</span> Your identity stays private. No one, not even system administrators, can see who you voted for. Each vote is hashed—a process that secures your vote without revealing your identity—and cannot be traced back to you.</li>
             <br />
-            <li>Transparent and Verifiable Results: You can check the total votes for each candidate and verify your vote using your unique transaction receipt. This receipt contains a summary of your vote and a transaction hash, allowing you to confirm it was recorded correctly on the blockchain.</li>
+            <li>
+              <span class="light-yellow">Transparent and Verifiable Results:</span> You can check the total votes for each candidate and verify your vote using your unique transaction receipt. This receipt contains a summary of your vote and a transaction hash, allowing you to confirm it was
+              recorded correctly on the blockchain.
+            </li>
           </ul>
           <br />
 
