--- a/views/admin/election-vote-tally.ejs
+++ b/views/admin/election-vote-tally.ejs
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" href="admin/css/sidebar.css" />
     <link rel="stylesheet" type="text/css" href="admin/css/candidates.css" />
     <link rel="stylesheet" type="text/css" href="admin/css/vote-tally.css" />
+    <link rel="stylesheet" type="text/css" href="admin/css/vote-tally.css" />
+    <link rel="stylesheet" type="text/css" href="admin/css/index-election.css" />
     <!-- <link rel="stylesheet" type="text/css" href="admin/css/sample/vote-tally.css" /> -->
 
     <link rel="stylesheet" type="text/css" href="admin/dependencies/progress-bar.css" />
@@ -235,7 +237,7 @@
                 </div>
                 <div class="candidate-info">
                   <h2><%= candidate.name %></h2>
-                  <p>Party: <%= candidate.party %></p>
+                  <p><%= candidate.party %></p>
                   <div class="row">
                     <div class="progress-bar">
                       <div class="progress" data-target="<%= percentage %>%" style="width: 0"><%= candidate.voteCount %> votes</div>
@@ -244,8 +246,9 @@
                   </div>
                 </div>
               </div>
+              <a href="#" class="votes">View List of Voter IDs</a>
               <% }); %> <% if (abstainCandidate) { const percentage = totalVotes > 0 ? ((abstainCandidate.voteCount / totalVotes) * 100).toFixed(2) : 0; %>
-              <div class="candidate">
+              <div class="candidate abstain">
                 <div class="img-container">
                   <h2><%= abstainCandidate.name %></h2>
                 </div>
@@ -258,9 +261,13 @@
                   </div>
                 </div>
               </div>
+              <a href="#" class="votes">View List of Voter IDs</a>
+
               <% } %>
-              <br />
-              <h3 class="right"><span>150</span> total votes cast</h3>
+
+              <h3 class="right">
+                <span><u>150</u></span> total votes cast
+              </h3>
             </div>
 
             <script>
@@ -288,7 +295,7 @@
                 </div>
                 <div class="candidate-info">
                   <h2><%= candidate.name %></h2>
-                  <p>Party: <%= candidate.party %></p>
+                  <p><%= candidate.party %></p>
                   <div class="row">
                     <div class="progress-bar">
                       <div class="progress" data-target="<%= percentage %>%" style="width: 0"><%= candidate.voteCount %> votes</div>
@@ -312,8 +319,10 @@
                 </div>
               </div>
               <% } %>
-              <br />
-              <h3 class="right"><span>150</span> total votes cast</h3>
+
+              <h3 class="right">
+                <span><u>150</u></span> total votes cast
+              </h3>
             </div>
 
             <script>
@@ -341,7 +350,7 @@
                 </div>
                 <div class="candidate-info">
                   <h2><%= candidate.name %></h2>
-                  <p>Party: <%= candidate.party %></p>
+                  <p><%= candidate.party %></p>
                   <div class="row">
                     <div class="progress-bar">
                       <div class="progress" data-target="<%= percentage %>%" style="width: 0"><%= candidate.voteCount %> votes</div>
@@ -352,7 +361,9 @@
               </div>
               <% }); %>
               <br />
-              <h3 class="right"><span>150</span> total votes cast</h3>
+              <h3 class="right">
+                <span><u>150</u></span> total votes cast
+              </h3>
             </div>
 
             <script>
@@ -405,7 +416,7 @@
                     </div>
                     <div class="candidate-info">
                       <h2><%= candidate.name %></h2>
-                      <p>Party: <%= candidate.party %></p>
+                      <p><%= candidate.party %></p>
                       <div class="row">
                         <div class="progress-bar">
                           <div class="progress" data-target="<%= percentage %>%" style="width: 0"><%= candidate.voteCount %> votes</div>
@@ -432,8 +443,10 @@
                   </div>
                 </div>
                 <% } %>
-                <br />
-                <h3 class="right"><span>150</span> total votes cast</h3>
+
+                <h3 class="right">
+                  <span><u>150</u></span> total votes cast
+                </h3>
               </div>
 
               <% const viceGovernorCandidates = candidates.filter(candidate => candidate.position === 'vice governor' && candidate.college && candidate.name !== 'Abstain'); const abstainCandidateViceGovernor = candidates.find(candidate => candidate.position === 'vice governor' && candidate.college
@@ -452,7 +465,7 @@
                     </div>
                     <div class="candidate-info">
                       <h2><%= candidate.name %></h2>
-                      <p>Party: <%= candidate.party %></p>
+                      <p><%= candidate.party %></p>
                       <div class="row">
                         <div class="progress-bar">
                           <div class="progress" data-target="<%= percentage %>%" style="width: 0"><%= candidate.voteCount %> votes</div>
@@ -479,8 +492,10 @@
                   </div>
                 </div>
                 <% } %>
-                <br />
-                <h3 class="right"><span>150</span> total votes cast</h3>
+
+                <h3 class="right">
+                  <span><u>150</u></span> total votes cast
+                </h3>
               </div>
 
               <!-- Board Member Container -->
@@ -509,7 +524,7 @@
                     </div>
                     <div class="candidate-info">
                       <h2><%= candidate.name %></h2>
-                      <p>Party: <%= candidate.party %></p>
+                      <p><%= candidate.party %></p>
                       <div class="row">
                         <div class="progress-bar">
                           <div class="progress" data-target="<%= percentage %>%" style="width: 0"><%= candidate.voteCount %> votes</div>
@@ -536,8 +551,10 @@
                   </div>
                 </div>
                 <% }); } %> <% }); %>
-                <br />
-                <h3 class="right"><span>150</span> total votes cast</h3>
+
+                <h3 class="right">
+                  <span><u>150</u></span> total votes cast
+                </h3>
               </div>
 
               <script>
